clusters/my-cluster/apps/number-generator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: number-generator
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    # http://www.172-18-0-3.nip.io
    - host: "www.172-18-0-3.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nodejs-frontend
                port:
                  number: 80
          - pathType: Prefix
            path: "/next-number"
            backend:
              service:
                name: golang-api
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-frontend
  namespace: default
spec:
  selector:
    app: nodejs-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
